# chainx-2.0-genesis-generator

./: .gitignore  Cargo.toml  README.md  config.json  export.sh
accounts/: 1-10000.json  1-100000.json  10000001-10010000.json  10000001-10100000.json  1000001-1010000.json  1000001-1100000.json  100001-110000.json  100001-200000.json  10001-20000.json  10060001-10070000.json  10080001-10090000.json  10100001-10110000.json  10100001-10200000.json  1010001-1020000.json  10110001-10120000.json  10160001-10170000.json  10190001-10200000.json  10200001-10210000.json  10200001-10300000.json  1020001-1030000.json  10210001-10220000.json  10220001-10230000.json  10230001-10240000.json  10260001-10270000.json  10300001-10310000.json  10300001-10400000.json  1030001-1040000.json  10330001-10340000.json  10340001-10350000.json  10380001-10390000.json  10400001-10500000.json  1040001-1050000.json  10410001-10420000.json  10420001-10430000.json  10460001-10470000.json  10500001-10600000.json  1050001-1060000.json  10520001-10530000.json  10550001-10560000.json  10600001-10700000.json  (+1769 more)
genesis-params-builder/: asset_mining.js  balances.js  index.js  nominators.js  package.json  utils.js  validators.js
src/: cmd.rs  lib.rs
src/chainx/: decode.rs  mod.rs  rpc.rs  types.rs
state_1.0/21000000/: accounts.json  assets-total.json  deposit-weight-accounts.json  deposit-weight-nodes.json  intentions.json  session-index.json  vote-weight-accounts.json  vote-weight-nodes.json
state_1.0/22000000/: accounts.json  assets-total.json  deposit-weight-accounts.json  deposit-weight-nodes.json  (+4 more)
(+34 files in other folders)
