[package]
name = "chainx-state-exporter"
version = "0.1.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "accounts"
path = "src/bin/accounts.rs"

[[bin]]
name = "decode"
path = "src/bin/decode.rs"

[[bin]]
name = "intentions"
path = "src/bin/intentions.rs"

[[bin]]
name = "assets"
path = "src/bin/assets.rs"

[[bin]]
name = "assets-verify"
path = "src/bin/assets_verify.rs"

[[bin]]
name = "deposit-weight"
path = "src/bin/deposit_weight.rs"

[[bin]]
name = "vote-weight"
path = "src/bin/vote_weight.rs"

[[bin]]
name = "vote-weight-verify"
path = "src/bin/vote_weight_verify.rs"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.0", features = ["attributes"] }
env_logger = "0.7"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
url = { version = "2.1", features = ["serde"] }
web3 = { version = "0.13", default-features = false, features = ["ws-tls"] }

codec = { package = "parity-scale-codec", version = "1.3", features = ["derive"] }
sp-core = "2.0.0"
sp-runtime = "2.0.0"
pallet-indices = "2.0.0"

light-bitcoin = { git = "https://github.com/chainx-org/light-bitcoin", branch = "master" }
